[feat] socket api 추가